--- a/src/pandroid/app/src/main/res/xml/advanced_preferences.xml
+++ b/src/pandroid/app/src/main/res/xml/advanced_preferences.xml
@@ -47,5 +47,5 @@
         android:defaultValue="true"
         android:summaryOn="@string/pref_logger_service_summary"
         android:summaryOff="@string/pref_logger_service_summary"/>
-
+   </PreferenceCategory>
 </PreferenceScreen>
