--- a/src/pandroid/app/src/main/res/xml/advanced_preferences.xml
+++ b/src/pandroid/app/src/main/res/xml/advanced_preferences.xml
@@ -22,6 +22,8 @@
         android:defaultValue="false"
         app:iconSpaceReserved="false"/>
 
+      </PreferenceCategory>
+
     <PreferenceCategory
         app:iconSpaceReserved="false"
         app:title="@string/graphics">
